--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "workshop-tdd",
   "version": "1.0.0",
+  "type": "module",
   "description": "Oficina Quero Ser Dev para iniciantes em programação",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.7.0"
   }
 }
